Import OpenGL and its related libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,18 @@ endif()
 
 project(${PROJECT_NAME})
 add_executable(${PROJECT_NAME} src/main.cpp)
+
+
+include(Dependency.cmake)
+
+
+target_include_directories(${PROJECT_NAME} PUBLIC ${DEP_INCLUDE_DIR})
+target_link_directories(${PROJECT_NAME} PUBLIC ${DEP_LIB_DIR})
+target_link_libraries(${PROJECT_NAME} PUBLIC ${DEP_LIBS})
+
+
+add_dependencies(${PROJECT_NAME} ${DEP_LIST})
+
+if (MSVC)
+    target_compile_options(${PROJECT_NAME} PUBLIC /wd4819)
+endif()
